Reverted to "uploadArchives" because that's from the "maven" plugin

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ jar {
     }
 }
 
-uploadSnapshot {
+uploadArchives {
     repositories.mavenDeployer {
         configuration = configurations.deployerJars
         repository(url: "https://artifacts.unidata.ucar.edu/content/repositories/unidata-snapshots") {
