--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
-version = '1.0-SNAPSHOT'
+version = '1.0'
 group = 'edu.ucar.unidata'
 description = "Conway's Game of Life"
 
